test_suite/tests/ui/float/derive/from_xor_try_from.rs
use nutype::nutype;

#[nutype(derive(From, TryFrom))]
struct Number(f64);

fn main() {}
